[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mu-rasppi"
version = "0.1.0"
description = "Raspberry Pi camera benchmarks and utilities"
authors = [{name = "mu-files", email = "info@mu-files.com"}]
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "muimg",
]

[project.optional-dependencies]
astro = ["astropy"]
pi = [
    "picamera2",
    "pidng @ git+https://github.com/schoolpost/PiDNG.git",
]

[tool.setuptools]
py-modules = ["fits2dng", "picamera2_capture"]
